<resources>
    <string name="app_name">BlaBlaWild</string>
    <string name="Search_text">Search</string>
    <string name="action_settings">Settings</string>
    <string name="departure">Departure</string>
    <string name="depart">Departure</string>
    <string name="destination">Destination</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="date_of_departure">Date of Departure</string>
    <string name="search">SEARCH</string>
    <string name="add_elements_listview">Add elements listView</string>
    <string name="model">Model</string>
    <string name="brand">BRAND</string>
    <string name="kilometers">Kilometers</string>
    <string name="send">SEND</string>
    <string name="hours">Hours</string>

    <string-array name="vehiclelist">
        <item>Please select…</item>
        <item>Car</item>
        <item>Boat</item>
        <item>Plane</item>
    </string-array>


</resources>
